<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Productversion="">
  <DUT Name="ST_HMI_C1_Ctrl1_Pie_Chart" Id="1f965c20-0569-416d-bc31-96a1b2cd27f3">
    <Declaration><![CDATA[TYPE ST_HMI_C1_Ctrl1_Pie_Chart : 
STRUCT
	//Pie Chart
	bTrigReconfigure: BOOL;
	fM3_nDataInCh1: LREAL; //Values
	fM3_fDataInCh2: LREAL; //Values
	bM3_bRelativeOutput: BOOL; //Relative
	aM3_aChannelNames: ARRAY [1..2] OF STRING(255); //Labels
END_STRUCT
END_TYPE]]></Declaration>
  </DUT>
</TcPlcObject>